пепеписал запрос дерева объектов с оптимизацией через один запрос с нижних ветвей дерева на верх, теперь можно добавить динамические фильтры